# alpha-friends-llm-chatbot

./: . dockerignore  .gitignore  Dockerfile  README.md  app.py  install_docker.sh  install_gradio_script.sh  pyproject.toml  rebuild-and-docker-run.sh  requirements.txt  setenv.sh
data/: artificial_data_gpt_instructions.txt  combine_json_data.py  export_to_google_sheets.py  questionnaires.json  questionnaires_not_finished.json
data/phq9/: data_gsheets.json  phq9_data_full.json  q1.json  q2.json  q3.json  q4.json  q5.json  q6.json  q7.json  q8.json  q9.json
scripts/: gsheets_to_alpacca.py
src/: chat_utils.py  endpoint_helper.py  functions.py  google_sheet_helper.py  groq_request.py  hf_endpoint_helper.py  load_env_vars.py  questionnaire.py  streamlit_utils.py  test_enums.py
